--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,7 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+$body-font-family: "Comfortaa" !important;
+$heading-font-family: "Comfortaa" !important;
+$font-size-root: 16px;
